- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P3: Somewhat important
 - 
    6.2.0 Beta4, 6.8.2
 - 
    None
 
- 
        
 - 
        e657c7be9 (dev), c8184f4d1 (6.10)
 
QML Shortcut component generates the following strange warning under Qt 6.2:
qrc:/main.qml:11:5: QML Shortcut: Shortcut: Only binding to one of multiple key bindings associated with 9. Use 'sequences: [ <key> ]' to bind to all of them.
Code:
import QtQuick 2.12 import QtQuick.Window 2.12 import QtQuick.Controls 2.12 Window { width: 640 height: 480 visible: true title: qsTr("Hello World") Shortcut { sequence: StandardKey.Paste onActivated: console.log("PASTE") } }
- resulted from
 - 
                    
QTBUG-88682 Not able to trigger "Alt+Enter" shortcut
-         
 - Closed
 
 -